Changes to Adults, Teachers, Teen and Youth

--- a/Praesidium/Praesidium/Views/CyberSecurity/Youth.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Youth.cshtml
@@ -10,20 +10,19 @@
 
 
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum bibendum. Sed non enim ac elit malesuada venenatis. Suspendisse imperdiet dolor sit amet leo fermentum, sed pulvinar tellus cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec velit metus, facilisis a sodales non, scelerisque et est. Maecenas a sapien placerat, dignissim dui vestibulum, ultricies est. Praesent non mauris non dolor ultricies tincidunt. Nulla tellus purus, venenatis eu magna in, ultrices pellentesque ligula. Donec elementum pulvinar ex, non mollis justo lacinia et. Sed commodo porta felis, quis viverra ligula auctor vel. Etiam elit lacus, vehicula vel finibus quis, semper vel lectus.
+            <h1>Welcome to the Youth resource page for Cyber Security</h1>
+            This is a page where youth (thats you!) can learn about being safe online!
 
-            Nam luctus tellus massa, ut fringilla quam ultrices a. Nam turpis ex, convallis mollis erat non, consectetur vehicula neque. Morbi enim metus, condimentum et tincidunt vitae, vestibulum eu neque. Sed velit felis, suscipit quis nibh suscipit, feugiat consequat quam. Suspendisse finibus tempus maximus. Quisque erat ex, tincidunt vitae euismod nec, sagittis eu urna. Etiam eu nibh sit amet dolor rutrum ullamcorper et eget diam. Duis pulvinar convallis semper. Nam volutpat tincidunt cursus. Etiam vitae felis orci. Fusce nec leo a diam suscipit semper ac semper nibh. Suspendisse potenti. Maecenas ac sem a lorem aliquet efficitur.
 
         </p>
 
     </div>
     <div class="col-md-4 align-center ">
-        <p class="h3" style="text-align:center;color:slategray;padding-top:25%;"><strong>Youth Page Links</strong></p>
+        <p class="h3" style="text-align:center;color:slategray;padding-top:25%;"><strong>Tips for youth</strong></p>
         <ul class="align-left">
-            <li><A HREF="http://praesidium.azurewebsites.net">Youth Group 1</A></li>
-            <li><A HREF="http://praesidium.azurewebsites.net">Youth Group 2</A></li>
-            <li><A HREF="http://praesidium.azurewebsites.net">Youth Group 3</A></li>
-            <li><A HREF="http://praesidium.azurewebsites.net">Resources</A></li>
+            <li>Always tell your parents about people you don't know trying to talk to you</li>
+            <li>Never talk to strangers online</li>
+            <li>Only go to websites your parents approve</li>
         </ul>
 
         <br /><br />
@@ -38,23 +37,11 @@
     <div class="well">
         <p class="h2" style="text-align:center; color:slategray"><strong>Article 1</strong></p><br />
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum bibendum. Sed non enim ac elit malesuada venenatis. Suspendisse imperdiet dolor sit amet leo fermentum, sed pulvinar tellus cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec velit metus, facilisis a sodales non, scelerisque et est. Maecenas a sapien placerat, dignissim dui vestibulum, ultricies est. Praesent non mauris non dolor ultricies tincidunt. Nulla tellus purus, venenatis eu magna in, ultrices pellentesque ligula. Donec elementum pulvinar ex, non mollis justo lacinia et. Sed commodo porta felis, quis viverra ligula auctor vel. Etiam elit lacus, vehicula vel finibus quis, semper vel lectus.
-
-            Nam luctus tellus massa, ut fringilla quam ultrices a. Nam turpis ex, convallis mollis erat non, consectetur vehicula neque. Morbi enim metus, condimentum et tincidunt vitae, vestibulum eu neque. Sed velit felis, suscipit quis nibh suscipit, feugiat consequat quam. Suspendisse finibus tempus maximus. Quisque erat ex, tincidunt vitae euismod nec, sagittis eu urna. Etiam eu nibh sit amet dolor rutrum ullamcorper et eget diam. Duis pulvinar convallis semper. Nam volutpat tincidunt cursus. Etiam vitae felis orci. Fusce nec leo a diam suscipit semper ac semper nibh. Suspendisse potenti. Maecenas ac sem a lorem aliquet efficitur.
-
+            <h2>Sammy and Facebook.</h2>
+            Your friend Sammy has a Facebook and you think thats really cool! Your parents say you can't have a Facebook until your older, so what do you do make a Facebook with a fake birthday or follow your parents rules? What should you do to...
         </p>
 
     </div>
-
-    <div class="well">
-        <p class="h2" style="text-align:center; color:slategray"><strong>Article 2</strong></p><br />
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum bibendum. Sed non enim ac elit malesuada venenatis. Suspendisse imperdiet dolor sit amet leo fermentum, sed pulvinar tellus cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec velit metus, facilisis a sodales non, scelerisque et est. Maecenas a sapien placerat, dignissim dui vestibulum, ultricies est. Praesent non mauris non dolor ultricies tincidunt. Nulla tellus purus, venenatis eu magna in, ultrices pellentesque ligula. Donec elementum pulvinar ex, non mollis justo lacinia et. Sed commodo porta felis, quis viverra ligula auctor vel. Etiam elit lacus, vehicula vel finibus quis, semper vel lectus.
-
-            Nam luctus tellus massa, ut fringilla quam ultrices a. Nam turpis ex, convallis mollis erat non, consectetur vehicula neque. Morbi enim metus, condimentum et tincidunt vitae, vestibulum eu neque. Sed velit felis, suscipit quis nibh suscipit, feugiat consequat quam. Suspendisse finibus tempus maximus. Quisque erat ex, tincidunt vitae euismod nec, sagittis eu urna. Etiam eu nibh sit amet dolor rutrum ullamcorper et eget diam. Duis pulvinar convallis semper. Nam volutpat tincidunt cursus. Etiam vitae felis orci. Fusce nec leo a diam suscipit semper ac semper nibh. Suspendisse potenti. Maecenas ac sem a lorem aliquet efficitur.
-
-        </p>
-
     </div>
 
-</div>
+   
