--- a/Praesidium/Praesidium/Views/CyberSecurity/Adults.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Adults.cshtml
@@ -10,20 +10,18 @@
 
 
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum bibendum. Sed non enim ac elit malesuada venenatis. Suspendisse imperdiet dolor sit amet leo fermentum, sed pulvinar tellus cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec velit metus, facilisis a sodales non, scelerisque et est. Maecenas a sapien placerat, dignissim dui vestibulum, ultricies est. Praesent non mauris non dolor ultricies tincidunt. Nulla tellus purus, venenatis eu magna in, ultrices pellentesque ligula. Donec elementum pulvinar ex, non mollis justo lacinia et. Sed commodo porta felis, quis viverra ligula auctor vel. Etiam elit lacus, vehicula vel finibus quis, semper vel lectus.
-
-            Nam luctus tellus massa, ut fringilla quam ultrices a. Nam turpis ex, convallis mollis erat non, consectetur vehicula neque. Morbi enim metus, condimentum et tincidunt vitae, vestibulum eu neque. Sed velit felis, suscipit quis nibh suscipit, feugiat consequat quam. Suspendisse finibus tempus maximus. Quisque erat ex, tincidunt vitae euismod nec, sagittis eu urna. Etiam eu nibh sit amet dolor rutrum ullamcorper et eget diam. Duis pulvinar convallis semper. Nam volutpat tincidunt cursus. Etiam vitae felis orci. Fusce nec leo a diam suscipit semper ac semper nibh. Suspendisse potenti. Maecenas ac sem a lorem aliquet efficitur.
-
+          <h1>Welcome to the Adult resource page for Cyber Security</h1>
+            This page is a resource for all adults, whether you are a parent, a grandparent, a police officer or even a official. This page will provide you with articles about the importance of providing a safe online experience for children and how you can go about that from your various roles.
         </p>
 
     </div>
     <div class="col-md-4 align-center ">
         <p class="h3" style="text-align:center;color:slategray;padding-top:25%;"><strong>Youth Page Links</strong></p>
         <ul class="align-left">
-            <li><A HREF="http://praesidium.azurewebsites.net">Parent Group 1</A></li>
-            <li><A HREF="http://praesidium.azurewebsites.net">Parent Group 2</A></li>
-            <li><A HREF="http://praesidium.azurewebsites.net">Parent Group 3</A></li>
-            <li><A HREF="http://praesidium.azurewebsites.net">Resources</A></li>
+            <li><A HREF="http://www.cox.com/wcm/en/aboutus/datasheet/takecharge/2009-teen-survey.pdf">COX Communications Report</A></li>
+            <li><A HREF="http://www.innocentsatrisk.org">Innocents at Risk</A></li>
+            <li><A HREF="https://humantraffickinghotline.org">Human Trafficking Hotline</A></li>
+           
         </ul>
 
         <br /><br />
@@ -38,7 +36,7 @@
     <div class="well">
         <p class="h2" style="text-align:center; color:slategray"><strong>Article 1</strong></p><br />
         <p>
-          Top 10 way you can keep you kids safe online. 
+          <h2>Top 10 way you can keep you kids safe online</h2> 
             Did you know that over 50% of kids have shared/posted their real age online? This is an alarming statisic that....
         </p>
 
@@ -47,10 +45,8 @@
     <div class="well">
         <p class="h2" style="text-align:center; color:slategray"><strong>Article 2</strong></p><br />
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum bibendum. Sed non enim ac elit malesuada venenatis. Suspendisse imperdiet dolor sit amet leo fermentum, sed pulvinar tellus cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec velit metus, facilisis a sodales non, scelerisque et est. Maecenas a sapien placerat, dignissim dui vestibulum, ultricies est. Praesent non mauris non dolor ultricies tincidunt. Nulla tellus purus, venenatis eu magna in, ultrices pellentesque ligula. Donec elementum pulvinar ex, non mollis justo lacinia et. Sed commodo porta felis, quis viverra ligula auctor vel. Etiam elit lacus, vehicula vel finibus quis, semper vel lectus.
-
-            Nam luctus tellus massa, ut fringilla quam ultrices a. Nam turpis ex, convallis mollis erat non, consectetur vehicula neque. Morbi enim metus, condimentum et tincidunt vitae, vestibulum eu neque. Sed velit felis, suscipit quis nibh suscipit, feugiat consequat quam. Suspendisse finibus tempus maximus. Quisque erat ex, tincidunt vitae euismod nec, sagittis eu urna. Etiam eu nibh sit amet dolor rutrum ullamcorper et eget diam. Duis pulvinar convallis semper. Nam volutpat tincidunt cursus. Etiam vitae felis orci. Fusce nec leo a diam suscipit semper ac semper nibh. Suspendisse potenti. Maecenas ac sem a lorem aliquet efficitur.
-
+            <h2>Cyberbullying:A huge problem in Youth of today</h2>
+            Did you know that over 25% of girls and 14% of boys have been victims of cyberbullying? This is a growing problem and it is only going to get worse. According to COX Communications...
         </p>
 
     </div>
