--- a/Praesidium/Praesidium/Views/CyberSecurity/Teachers.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Teachers.cshtml
@@ -11,20 +11,18 @@
 
 
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum bibendum. Sed non enim ac elit malesuada venenatis. Suspendisse imperdiet dolor sit amet leo fermentum, sed pulvinar tellus cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec velit metus, facilisis a sodales non, scelerisque et est. Maecenas a sapien placerat, dignissim dui vestibulum, ultricies est. Praesent non mauris non dolor ultricies tincidunt. Nulla tellus purus, venenatis eu magna in, ultrices pellentesque ligula. Donec elementum pulvinar ex, non mollis justo lacinia et. Sed commodo porta felis, quis viverra ligula auctor vel. Etiam elit lacus, vehicula vel finibus quis, semper vel lectus.
-
-            Nam luctus tellus massa, ut fringilla quam ultrices a. Nam turpis ex, convallis mollis erat non, consectetur vehicula neque. Morbi enim metus, condimentum et tincidunt vitae, vestibulum eu neque. Sed velit felis, suscipit quis nibh suscipit, feugiat consequat quam. Suspendisse finibus tempus maximus. Quisque erat ex, tincidunt vitae euismod nec, sagittis eu urna. Etiam eu nibh sit amet dolor rutrum ullamcorper et eget diam. Duis pulvinar convallis semper. Nam volutpat tincidunt cursus. Etiam vitae felis orci. Fusce nec leo a diam suscipit semper ac semper nibh. Suspendisse potenti. Maecenas ac sem a lorem aliquet efficitur.
+            <h1>Welcome to the Teachers resource page for Cyber Security</h1>
+            This is a page where teachers and other educators can learn tips and read articles and also access useful links to help educate thier students online.
 
         </p>
 
     </div>
     <div class="col-md-4 align-center ">
-        <p class="h3" style="text-align:center;color:slategray;padding-top:25%;"><strong>Youth Page Links</strong></p>
+        <p class="h3" style="text-align:center;color:slategray;padding-top:25%;"><strong>Teacher Page Links</strong></p>
         <ul class="align-left">
-            <li><A HREF="http://praesidium.azurewebsites.net">Teachers Group 1</A></li>
-            <li><A HREF="http://praesidium.azurewebsites.net">Teachers Group 2</A></li>
-            <li><A HREF="http://praesidium.azurewebsites.net">Teachers Group 3</A></li>
-            <li><A HREF="http://praesidium.azurewebsites.net">Resources</A></li>
+            <li><A HREF="http://www.cox.com/wcm/en/aboutus/datasheet/takecharge/2009-teen-survey.pdf">COX Communications Report</A></li>
+            <li><A HREF="http://www.innocentsatrisk.org">Innocents at Risk</A></li>
+            <li><A HREF="https://humantraffickinghotline.org">Human Trafficking Hotline</A></li>
         </ul>
 
         <br /><br />
@@ -39,9 +37,8 @@
     <div class="well">
         <p class="h2" style="text-align:center; color:slategray"><strong>Article 1</strong></p><br />
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum bibendum. Sed non enim ac elit malesuada venenatis. Suspendisse imperdiet dolor sit amet leo fermentum, sed pulvinar tellus cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec velit metus, facilisis a sodales non, scelerisque et est. Maecenas a sapien placerat, dignissim dui vestibulum, ultricies est. Praesent non mauris non dolor ultricies tincidunt. Nulla tellus purus, venenatis eu magna in, ultrices pellentesque ligula. Donec elementum pulvinar ex, non mollis justo lacinia et. Sed commodo porta felis, quis viverra ligula auctor vel. Etiam elit lacus, vehicula vel finibus quis, semper vel lectus.
-
-            Nam luctus tellus massa, ut fringilla quam ultrices a. Nam turpis ex, convallis mollis erat non, consectetur vehicula neque. Morbi enim metus, condimentum et tincidunt vitae, vestibulum eu neque. Sed velit felis, suscipit quis nibh suscipit, feugiat consequat quam. Suspendisse finibus tempus maximus. Quisque erat ex, tincidunt vitae euismod nec, sagittis eu urna. Etiam eu nibh sit amet dolor rutrum ullamcorper et eget diam. Duis pulvinar convallis semper. Nam volutpat tincidunt cursus. Etiam vitae felis orci. Fusce nec leo a diam suscipit semper ac semper nibh. Suspendisse potenti. Maecenas ac sem a lorem aliquet efficitur.
+            <h2>Your responsibility as a teacher</h2>
+            What is your responsibility as a teacher of youth or teens when it comes to educating them about being safe online? Is this the responsibility of the parents to educate thier children? Is there an age at which it is inappropriate to educate children on....
 
         </p>
 
@@ -50,10 +47,8 @@
     <div class="well">
         <p class="h2" style="text-align:center; color:slategray"><strong>Article 2</strong></p><br />
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum bibendum. Sed non enim ac elit malesuada venenatis. Suspendisse imperdiet dolor sit amet leo fermentum, sed pulvinar tellus cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec velit metus, facilisis a sodales non, scelerisque et est. Maecenas a sapien placerat, dignissim dui vestibulum, ultricies est. Praesent non mauris non dolor ultricies tincidunt. Nulla tellus purus, venenatis eu magna in, ultrices pellentesque ligula. Donec elementum pulvinar ex, non mollis justo lacinia et. Sed commodo porta felis, quis viverra ligula auctor vel. Etiam elit lacus, vehicula vel finibus quis, semper vel lectus.
-
-            Nam luctus tellus massa, ut fringilla quam ultrices a. Nam turpis ex, convallis mollis erat non, consectetur vehicula neque. Morbi enim metus, condimentum et tincidunt vitae, vestibulum eu neque. Sed velit felis, suscipit quis nibh suscipit, feugiat consequat quam. Suspendisse finibus tempus maximus. Quisque erat ex, tincidunt vitae euismod nec, sagittis eu urna. Etiam eu nibh sit amet dolor rutrum ullamcorper et eget diam. Duis pulvinar convallis semper. Nam volutpat tincidunt cursus. Etiam vitae felis orci. Fusce nec leo a diam suscipit semper ac semper nibh. Suspendisse potenti. Maecenas ac sem a lorem aliquet efficitur.
-
+            <h2>How far is too far when it comes to helping a student?</h2>
+            All teachers have been in this situation. You see as student in need and want to help them anyway you can, except this time its a student that is normally an A student and they are failing tests and cutting class, you want to get to the bottom of this...
         </p>
 
     </div>
