--- a/Praesidium/Praesidium/Views/Admin/FilesEdit.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/FilesEdit.cshtml
@@ -1,17 +1,32 @@
 ﻿@model Praesidium.Data_Models.Admin.ShFile
 
 @{
-    ViewBag.Title = "FilesEdit";
+    ViewBag.Title = "Edit "+(Model.FileName);
 }
-
-<h2>FilesEdit test</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
+    <script src="~/scripts/tinymce/tinymce.min.js"></script>
+    <!-- Script to wire up your TinyMCE editor -->
+        <script type="text/javascript">
+        tinyMCE.init({
+            // General options
+            mode: "textareas",
+            theme: "modern",
+            // Theme options
+            theme_advanced_buttons1: "save,|,bold,italic,underline,strikethrough,|,justifyleft,justifycenter,justifyright,justifyfull,|,styleselect,formatselect,fontselect,fontsizeselect",
+            theme_advanced_buttons2: "cut,copy,paste,pastetext,pasteword,|,search,replace,|,bullist,numlist,|,outdent,indent,blockquote,|,undo,redo,|,link,unlink,anchor,image,cleanup,help,code,|,insertdate,inserttime,preview,|,forecolor,backcolor",
+            theme_advanced_buttons3: "tablecontrols,|,hr,removeformat,visualaid,|,sub,sup,|,charmap,emotions,iespell,media,advhr,|,print,|,ltr,rtl,|,fullscreen",
+            theme_advanced_buttons4: "insertlayer,moveforward,movebackward,absolute,|,styleprops,spellchecker,|,cite,abbr,acronym,del,ins,attribs,|,visualchars,nonbreaking,template,blockquote,pagebreak,|,insertfile,insertimage",
+            theme_advanced_toolbar_location: "top",
+            theme_advanced_toolbar_align: "left",
+            theme_advanced_statusbar_location: "bottom",
+            theme_advanced_resizing: true
+        });
+        </script>
 
     <div class="form-horizontal">
-        <h4>ShFile</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -31,7 +46,7 @@
             </div>*@
 
         <div class="form-group">
-            @Html.LabelFor(model => model.FkShSySection, "FkShSySection", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.FkShSySection, "Section", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("FkShSySection", (SelectList)ViewBag.section, "Please select", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.FkShSySection, "", new { @class = "text-danger" })
@@ -47,7 +62,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.UploadedBy, "UploadedBy", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.UploadedBy, "Uploaded By", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("UploadedBy", (SelectList)ViewBag.uploadusers, "Please select", htmlAttributes: new { @readonly = true, @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.UploadedBy, "", new { @class = "text-danger" })
@@ -55,7 +70,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DateUploaded, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.DateUploaded, "Date Uploaded", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.DateUploaded, new { htmlAttributes = new { @readonly = true, @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DateUploaded, "", new { @class = "text-danger" })
@@ -63,7 +78,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ModifiedBy, "ModifiedBy", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ModifiedBy, "Modified By", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("ModifiedBy", (SelectList)ViewBag.modusers, "Please select", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ModifiedBy, "", new { @class = "text-danger" })
@@ -71,7 +86,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DateModified, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.DateModified,"Date Modified", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.DateModified, new { htmlAttributes = new { @readonly = true, @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DateModified, "", new { @class = "text-danger" })
