--- a/Praesidium/Praesidium/Views/Admin/FilesCreate.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/FilesCreate.cshtml
@@ -1,4 +1,4 @@
-﻿@model Praesidium.Data_Models.Admin.ShFile
+﻿@model Praesidium.Models.FileWeb
 
 @{
     ViewBag.Title = "Add a file";
@@ -56,10 +56,10 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.FkShSySection, "Section", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Sections, "Section", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("SectionList", (SelectList)ViewBag.sections, "Please select", htmlAttributes: new { @class = "form-control", @onchange = "showGroup(this.value)" })
-                @Html.ValidationMessageFor(model => model.FkShSySection, "", new { @class = "text-danger" })
+                @Html.DropDownList("Sections", null, "Please select", htmlAttributes: new { @class = "form-control", @onchange = "showGroup(this.value)" })
+                @Html.ValidationMessageFor(model => model.Sections, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -70,7 +70,16 @@
         <div class="form-group">
             <label class="control-label col-md-2">Pages</label>
             <div class="col-md-10">
-                @foreach (var t in ViewBag.cblist)
+                @for (var i = 0; i < Model.Cblist.Count(); i++)
+                {
+                    <div class="@Model.Cblist[i].FkNavId }">
+                        @Html.HiddenFor(it => it.Cblist[i].Id)
+                        @Html.CheckBoxFor(it => it.Cblist[i].Checked,htmlAttributes: new { @id = "cb" + Model.Cblist[i].Id, @class = Model.Cblist[i].FkNavId })
+                        @Html.DisplayFor(it => it.Cblist[i].Name)
+                        <br/>
+                    </div>
+                }
+                    @*@foreach(var t in ViewBag.cblist)
                 {
 
                     <div class="@t.FkNavId" style="display: none;">
@@ -78,7 +87,7 @@
                         <label class="@t.FkNavId">@t.Name</label>
                         <br />
                     </div>
-                }
+                }*@
                 
             </div>
         </div>
@@ -92,10 +101,10 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.UploadedBy, "Uploaded by", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Uploader, "Uploaded by", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("UploadedBy", (SelectList)ViewBag.users, "Please select", htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.UploadedBy, "", new { @class = "text-danger" })
+                @Html.DropDownList("Uploader", null, "Please select", htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Uploader, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
