Hidden div fix on filescreate page

--- a/Praesidium/Praesidium/Views/Admin/FilesCreate.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/FilesCreate.cshtml
@@ -72,7 +72,7 @@
             <div class="col-md-10">
                 @for (var i = 0; i < Model.Cblist.Count(); i++)
                 {
-                    <div class="@Model.Cblist[i].FkNavId }">
+                    <div class="@Model.Cblist[i].FkNavId }" style="display: none;">
                         @Html.HiddenFor(it => it.Cblist[i].Id)
                         @Html.CheckBoxFor(it => it.Cblist[i].Checked,htmlAttributes: new { @id = "cb" + Model.Cblist[i].Id, @class = Model.Cblist[i].FkNavId })
                         @Html.DisplayFor(it => it.Cblist[i].Name)
