--- a/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
@@ -21,13 +21,20 @@
     </script>
 </head>
 <body>
+   <!-- Div for trafficking hotline-->
+
+
     <div class="whitespace">
+        <div class="row" style="margin-top:6px; font-size:18px;">
+            <a href="tel:1888373788888" style="margin-left:5%;color:grey;margin-bottom:10%;"><span class="glyphicon glyphicon-phone-alt" style="color:dodgerblue;"></span>  National Human Trafficking Hotline <strong style="color:dodgerblue">1(888)373-7888</strong></a>
+        </div>
 
     </div>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+
+    <div class="navbar navbar-inverse navbar-fixed-top"  style="margin-top:10px;">
 
         <div class="container">
-            <div class="navbar-header">
+            <div class="navbar-header" style="margin-top:5px;">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
