--- a/Praesidium/Praesidium/Views/Home/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Home/Index.cshtml
@@ -58,12 +58,12 @@
 
 <div class="row">
     <div class="col-md-12" id="borders">
-        <h2 style="text-align: center;" >Top Resources</h2>
-        <div style="border-top: 1px solid black; border-bottom: 1px solid black">
-            <h4>What is Human trafficking</h4>
-            <p>Views: 1027 &nbsp; Date Uploaded: 10/27/2016</p>
-            <p>Description</p>
-            <p> 
+        <h2 id="headers_borders" >Top Resources</h2>
+        <div style="border-top: 1px solid black; ">
+            <P id="p_textBorders">What is Human trafficking</P>
+            <p id="p_textBorders">Views: 1027 &nbsp; Date Uploaded: 10/27/2016</p>
+            <p id="p_textBorders" >Description</pid="p_textBorders">
+            <p id="p_textBorders"> 
                 This resource describes the key points to Human trafficking and provides information on key indicators.
             </p>
         </div>
@@ -72,15 +72,15 @@
 
 <div class="row"  id="borders">
     <div class="col-md-6" >
-        <h2 style="text-align: center;" >News</h2>
-        <p>
+        <h2 id="headers_borders">News</h2>
+        <p id="p_textBorders">
             test for news - test for news - test for news - test for news - test for news - test for news - test for news - test for news - test for news -
             test for news - test for news - test for news - test for news - test for news - test for news - test for news - test for news - test for news - 
         </p>        
     </div>
     <div class="col-md-6" >
-        <h2 style="text-align: center;" >Recently Added</h2>
-        <p>
+        <h2 id="headers_borders">Recently Added</h2>
+        <p id="p_textBorders">
             test for recently added - test for recently added - test for recently added - test for recently added - test for recently added - 
             test for recently added - test for recently added - test for recently added - test for recently added - test for recently added - 
         </p>
