--- a/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
@@ -5,42 +5,43 @@
 
 <div class="container">
     <div class="jumbotron" id="cyber_sec_jumbo">
-        <h1> Cyber Security: Why It's Important</h1>
+        <h1> Cyber Security</h1>
     </div>
 </div>
- 
 
     <div class="row">
         <div class="col-md-8">  
 
-            <p>
-                <h1><strong>The dangers of the Internet</strong></h1>
-                Cyber Security is a serious topic that nearly everyone deals with on a daily basis. Being safe online is of huge importance. This situation is life or death some people. Every single day children, partents and experts battle the bad guys. Consequenses of not being safe online could vary from loss of reputation, financial loss all the way to bodily harm and trafficking. The danger is real and must not be ignored. 
-                
-            </p>
+            
+                <h1 id="headers"><strong>The Dangers of the Internet</strong></h1>
+               <p id="p_text"> Cyber Security is a serious topic that nearly everyone deals with on a daily basis. Being safe online is of huge importance.
+                    This situation is life or death some people. Every single day children, partents and experts battle the bad guys. Consequenses
+                    of not being safe online could vary from loss of reputation, financial loss all the way to bodily harm and trafficking. The danger
+                    is real and must not be ignored. 
+              </p>  
+            
 
         </div>
 
         <div class="col-md-4 align-center" id="borders">
-            <p class="h3" style="text-align:center;padding-top:8%;padding-bottom:5%;"><strong>Top 8 Tips for Kids to Protect Themselves Online</strong></p>
-            <ul class="align-left">
+            <h3 id="borders_headers"><strong>Top 8 Tips for Kids to Protect Themselves Online</strong></h3>
+            <ul class="align-left" id="p_textborders">
                 <li>Keep your computer up to date.</li>
                 <li>Never tell anyonee where you live</li>
                 <li>Never tell people where you work or go to school</li>
-                <li>Don't overshare with people you don't know</li>
-         
+                <li>Don't overshare with people you don't know</li>       
                 <li>Don't agree to meet strangers online</li>
                 <li>Don't accept files or send files to strangers</li>
                 <li>If you are uncomforatble at all tell a trusted adult.</li>
             </ul>
             <a href="#" style="margin-left:95px;" class="btn btn-warning bt-md ">Check out the Article!</a></ br></ br>
             </div>
-        
+             
             <div class="col-md-4 align-center" id="borders">
 
             <!-- Add another article link-->
-            <p class="h3" style="text-align:center;padding-top:8%;padding-bottom:5%;"><strong>Top Tips to Keeping your child safe online.</strong></p>
-            <ul class="align-left">
+            <h3 id="borders_headers"><strong>Top Tips to Keeping your child safe online.</strong></h3>
+            <ul class="align-left" id="p_textborders">
                 <li>Keep an eye on your child while they are using the internet</li>
                 <li>If you suspect inapropriate activity sit your child down and talk with them.</li>
                 <li>Monitor your childs chats and make sure they are with children their age and are approriate</li>
