--- a/Praesidium/Praesidium/Views/Admin/FilesCreate.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/FilesCreate.cshtml
@@ -1,4 +1,4 @@
-﻿@model Praesidium.Models.FileWeb
+﻿@model Praesidium.Data_Models.Admin.ShFile
 
 @{
     ViewBag.Title = "Add a file";
@@ -56,10 +56,10 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Sections, "Section", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.FkShSySection, "Section", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("Sections", null, "Please select", htmlAttributes: new { @class = "form-control", @onchange = "showGroup(this.value)" })
-                @Html.ValidationMessageFor(model => model.Sections, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.FkShSySection, (SelectList)ViewBag.sections, "Please select", htmlAttributes: new { @class = "form-control", @onchange = "showGroup(this.value)" })
+                @Html.ValidationMessageFor(model => model.FkShSySection, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -67,19 +67,19 @@
             This here
             *******@
 
-        <div class="form-group">
+        @*<div class="form-group">
             <label class="control-label col-md-2">Pages</label>
             <div class="col-md-10">
-                @for (var i = 0; i < Model.Cblist.Count(); i++)
+                @for (var i = 0; i < ViewBag.cblist.Count; i++)
                 {
-                    <div class="@Model.Cblist[i].FkNavId }" style="display: none;">
-                        @Html.HiddenFor(it => it.Cblist[i].Id)
-                        @Html.CheckBoxFor(it => it.Cblist[i].Checked,htmlAttributes: new { @id = "cb" + Model.Cblist[i].Id, @class = Model.Cblist[i].FkNavId })
-                        @Html.DisplayFor(it => it.Cblist[i].Name)
+                    <div class="@ViewBag.cblist[i].FkNavId }" style="display: none;">
+                        @Html.HiddenFor(it => it.cblist[i].Id)
+                        @Html.CheckBox("cb",htmlAttributes: new { @id = "cb" + ViewBag.cblist[i].Id, @class = ViewBag.cblist[i].FkNavId })
+                        @ViewBag.cblist[i].Name
                         <br/>
                     </div>
                 }
-                    @*@foreach(var t in ViewBag.cblist)
+                    @foreach(var t in ViewBag.cblist)
                 {
 
                     <div class="@t.FkNavId" style="display: none;">
@@ -87,10 +87,10 @@
                         <label class="@t.FkNavId">@t.Name</label>
                         <br />
                     </div>
-                }*@
+                }
                 
             </div>
-        </div>
+        </div>*@
 
 
         <div class="form-group editor-label">
@@ -101,10 +101,10 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Uploader, "Uploaded by", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.UploadedBy, "Uploaded by", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("Uploader", null, "Please select", htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Uploader, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.UploadedBy, (SelectList)ViewBag.users, "Please select", htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.UploadedBy, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
