--- a/Praesidium/Praesidium/Views/Home/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Home/Index.cshtml
@@ -59,11 +59,11 @@
 <div class="row">
     <div class="col-md-12" id="borders">
         <h2 id="headers_borders" >Top Resources</h2>
-        <div style="border-top: 1px solid black; ">
-            <P id="p_textBorders">What is Human trafficking</P>
-            <p id="p_textBorders">Views: 1027 &nbsp; Date Uploaded: 10/27/2016</p>
-            <p id="p_textBorders" >Description</pid="p_textBorders">
-            <p id="p_textBorders"> 
+        <div style="border-top: 1px solid white; ">
+            <P id="p_textborders">What is Human trafficking</P>
+            <p id="p_textborders">Views: 1027 &nbsp; Date Uploaded: 10/27/2016</p>
+            <p id="p_textborders" >Description</p>
+            <p id="p_textborders"> 
                 This resource describes the key points to Human trafficking and provides information on key indicators.
             </p>
         </div>
@@ -73,14 +73,14 @@
 <div class="row"  id="borders">
     <div class="col-md-6" >
         <h2 id="headers_borders">News</h2>
-        <p id="p_textBorders">
+        <p id="p_textborders">
             test for news - test for news - test for news - test for news - test for news - test for news - test for news - test for news - test for news -
             test for news - test for news - test for news - test for news - test for news - test for news - test for news - test for news - test for news - 
         </p>        
     </div>
     <div class="col-md-6" >
         <h2 id="headers_borders">Recently Added</h2>
-        <p id="p_textBorders">
+        <p id="p_textborders">
             test for recently added - test for recently added - test for recently added - test for recently added - test for recently added - 
             test for recently added - test for recently added - test for recently added - test for recently added - test for recently added - 
         </p>
