--- a/Praesidium/Praesidium/Views/trafficking/Statistics.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Statistics.cshtml
@@ -70,6 +70,7 @@
             <object data="https://www.state.gov/documents/organization/258876.pdf" width="100%" height="400" type='application/pdf'>
                 <p>Sorry, the PDF couldn't be displayed</p>
             </object>
+            </div>
 
     <!-- Right Side of Page -->
     <!-- Created as a panel -->
