About page changed ferris logo to TCS solutions

--- a/Praesidium/Praesidium/Views/Home/About.cshtml
+++ b/Praesidium/Praesidium/Views/Home/About.cshtml
@@ -13,7 +13,7 @@
 
             <!-- Made the ferris image responsive to scaling *Caleb*-->
 
-            <img src="~/Content/Images/img04.jpg" style="border: 2px solid black; width:100%;" class="img-responsive" id="p_text" />
+            <img src="~/Content/Images/TCS_Solutions.png" /> <div" style="border:2px solid black; width:100%;" class="img-responsive" id="p_text" />
         </div>
         <br />
         <div>
