Finished adjusting all Cyber_security pages

--- a/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
@@ -24,7 +24,7 @@
         </div>
 
         <div class="col-md-4 align-center" id="borders">
-            <h3 id="borders_headers"><strong>Top 8 Tips for Kids to Protect Themselves Online</strong></h3>
+            <h3 id="headers_borders"><strong>Top 8 Tips for Kids to Protect Themselves Online</strong></h3>
             <ul class="align-left" id="p_textborders">
                 <li>Keep your computer up to date.</li>
                 <li>Never tell anyonee where you live</li>
@@ -34,13 +34,13 @@
                 <li>Don't accept files or send files to strangers</li>
                 <li>If you are uncomforatble at all tell a trusted adult.</li>
             </ul>
-            <a href="#" style="margin-left:95px;" class="btn btn-warning bt-md ">Check out the Article!</a></ br></ br>
+            <a href="#" style="margin-left:95px;margin-bottom:10px;" class="btn btn-warning bt-md ">Check out the Article!</a></ br></ br>
             </div>
              
-            <div class="col-md-4 align-center" id="borders">
+            <div class="col-md-4 align-center" id="borders" style="float:right;">
 
             <!-- Add another article link-->
-            <h3 id="borders_headers"><strong>Top Tips to Keeping your child safe online.</strong></h3>
+            <h3 id="headers_borders"><strong>Top Tips to Keeping your child safe online.</strong></h3>
             <ul class="align-left" id="p_textborders">
                 <li>Keep an eye on your child while they are using the internet</li>
                 <li>If you suspect inapropriate activity sit your child down and talk with them.</li>
@@ -48,13 +48,13 @@
                 <li>Talk with your child about the dangers of the internet.</li>
                 
             </ul>
-            <a href="#" style="margin-left:95px;" class="btn btn-danger bt-md">Check out the Article!</a>
+            <a href="#" style="margin-left:95px;margin-bottom:-8px;" class="btn btn-danger bt-md">Check out the Article!</a>
             <br /><br />
         </div>
     </div>
 
     <!-- added in row for the glyphicon table-->
-    <div class="row container-fluid" style="padding-top:7%;padding-left:-5%">
+    <div class="row container-fluid" style="margin-top:5px;margin-left:-10%">
 
 
         <div id="Quick Tips" class="container-fluid text-center">
