--- a/Praesidium/Praesidium/Views/CyberSecurity/Teen.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Teen.cshtml
@@ -3,40 +3,47 @@
     ViewBag.Title = "Teen";
 }
 
+
+
+<div class="container-fluid" id="photo_cont" style="margin-bottom:3%;">
+    <div class="row">
+        <div class="col-md-12">
+
+            <figure class="effect-caged">
+                <img src="~/Content/Images/cybersecurity3.jpg" style="width:100%;max-height:330px;" />
+                <figcaption>
+                    <h1> Cyber Security - Teens</h1>
+                </figcaption>
+            </figure>
+        </div>
+    </div>
+</div>
+
 <div class="row">
     <div class="col-md-8">
-
-        <p class="h2" style="text-align:center; color:slategray"><strong>Teen</strong></p><br /><br />
-
-
-        <p>
-            <h1>Welcome to the Teen resource page for Cyber Security</h1>
+        <h2 id="headers">Teen</h2>
+        <p id="p_text">        
             This is a page where teens can get non-judgemental information and serves to better educate them on issues that can help them avoid being unsafe online.
-
         </p>
-
     </div>
-    <div class="col-md-4 align-center ">
-        <p class="h3" style="text-align:center;color:slategray;padding-top:25%;"><strong>Teen Page Links</strong></p>
-        <ul class="align-left">
+
+    <div class="col-md-4 align-center" id="borders">
+        <h3 id="headers_borders">Links for Teen Resources</h3>
+        <ul class="align-left" id="p_textborders">
             <li><A HREF="http://www.cox.com/wcm/en/aboutus/datasheet/takecharge/2009-teen-survey.pdf">COX Communications Report</A></li>
             <li><A HREF="http://www.innocentsatrisk.org">Innocents at Risk</A></li>
             <li><A HREF="https://humantraffickinghotline.org">Human Trafficking Hotline</A></li>
         </ul>
-
-        <br /><br />
-
     </div>
-
 </div>
-</br>
 
 <div class="col-md-8">
-    <p class="h2" style="text-align:center; color:slategray"><strong>Resources for staying safe online</strong></p><br />
+  <h2 id="headers">Articles for Staying Safe Online</h2>
+    <div><p><br /></p></div>
     <div class="well">
-        <p class="h2" style="text-align:center; color:slategray"><strong>Article 1</strong></p><br />
-        <p>
-            <h2>Top 10 way you can stay safe online.</h2>
+        <h2 style="text-align:center; color:slategray"><strong>Article 1</strong></h2>
+        <p id="p_text">
+            <h3>Top 10 way you can stay safe online.</h3>
             We know that being all grown up is the coolest and you just want to be treated like an adult. Unfortuantly not all adults have a good intention when they are trying to be your "Friend". Use these 10 tips to be cool but stay safe...
 
         </p>
@@ -44,13 +51,10 @@
     </div>
 
     <div class="well">
-        <p class="h2" style="text-align:center; color:slategray"><strong>Article 2</strong></p><br />
-        <p>
-            <h2>Oversharing: What so bad about it</h2>
+        <h2 style="text-align:center; color:slategray"><strong>Article 2</strong></h2>
+        <p id="p_text">
+            <h3>Oversharing: What so bad about it</h3>
             Your friend Nate tweeted that he was going to be at the basktball game and everyone should meet him there at 7:30. This seems harmless right? Well it could open the door to a predator and give him the information he needs to...
-
         </p>
-
     </div>
-
 </div>
